[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "post-pulse"
version = "0.1.0"
description = "Local LinkedIn post analytics tracker with Claude AI feedback"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "aiosqlite>=0.19.0",
    "playwright>=1.40.0",
    "anthropic>=0.20.0",
    "httpx>=0.24.0",
]

[project.scripts]
post-pulse = "main:main"

[tool.setuptools]
py-modules = ["main", "scraper", "ai_feedback", "tracker"]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*"]

[tool.setuptools.package-data]
"*" = ["ui/**/*"]
